--- a/package.json
+++ b/package.json
@@ -26,19 +26,28 @@
     "@nestjs/devtools-integration": "^0.1.4",
     "@nestjs/event-emitter": "^1.4.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/platform-fastify": "^9.4.0",
+    "@nestjs/platform-ws": "^9.4.0",
+    "@nestjs/websockets": "^9.4.0",
     "better-sqlite3": "^8.3.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "fastify": "^4.17.0",
     "kysely": "^0.24.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
     "@types/supertest": "^2.0.11",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
@@ -76,7 +85,9 @@
     ],
     "moduleNameMapper": {
       "^@app/kysely-adapter(|/.*)$": "<rootDir>/libs/kysely-adapter/src/$1",
-      "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1"
+      "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
+      "^@app/request(|/.*)$": "<rootDir>/libs/request/src/$1",
+      "^@app/response(|/.*)$": "<rootDir>/libs/response/src/$1"
     }
   }
 }
