--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "class-validator": "^0.14.0",
     "fastify": "^4.17.0",
     "kysely": "^0.24.2",
+    "pg": "^8.10.0",
+    "pg-connection-string": "^2.5.0",
+    "pg-cursor": "^2.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "ws": "^8.13.0"
@@ -46,6 +49,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/pg": "^8.6.6",
+    "@types/pg-cursor": "^2.7.0",
     "@types/supertest": "^2.0.11",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
