--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "fastify": "^4.17.0",
     "kysely": "^0.24.2",
+    "magic-regexp": "^0.7.0",
     "pg": "^8.10.0",
     "pg-connection-string": "^2.5.0",
     "pg-cursor": "^2.9.0",
@@ -92,7 +93,9 @@
       "^@app/kysely-adapter(|/.*)$": "<rootDir>/libs/kysely-adapter/src/$1",
       "^@app/config(|/.*)$": "<rootDir>/libs/config/src/$1",
       "^@app/request(|/.*)$": "<rootDir>/libs/request/src/$1",
-      "^@app/response(|/.*)$": "<rootDir>/libs/response/src/$1"
+      "^@app/response(|/.*)$": "<rootDir>/libs/response/src/$1",
+      "^@app/schema(|/.*)$": "<rootDir>/libs/schema/src/$1",
+      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1"
     }
   }
 }
