--- a/package.json
+++ b/package.json
@@ -96,7 +96,8 @@
       "^@app/request(|/.*)$": "<rootDir>/libs/request/src/$1",
       "^@app/response(|/.*)$": "<rootDir>/libs/response/src/$1",
       "^@app/schema(|/.*)$": "<rootDir>/libs/schema/src/$1",
-      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1"
+      "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
+      "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1"
     }
   }
 }
