--- a/tsconfig.json
+++ b/tsconfig.json
@@ -61,6 +61,12 @@
       ],
       "@app/auth/*": [
         "libs/auth/src/*"
+      ],
+      "@app/members": [
+        "libs/members/src"
+      ],
+      "@app/members/*": [
+        "libs/members/src/*"
       ]
     }
   }
