--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "fastify": "^4.17.0",
     "kysely": "^0.24.2",
     "magic-regexp": "^0.7.0",
+    "ms": "^2.1.3",
     "pg": "^8.10.0",
     "pg-connection-string": "^2.5.0",
     "pg-cursor": "^2.9.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "snowflakify": "^1.0.5",
     "ws": "^8.13.0"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@types/better-sqlite3": "^7.6.4",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
+    "@types/ms": "^0.7.31",
     "@types/node": "18.15.11",
     "@types/pg": "^8.6.6",
     "@types/pg-cursor": "^2.7.0",
@@ -102,7 +105,9 @@
       "^@app/auth(|/.*)$": "<rootDir>/libs/auth/src/$1",
       "^@app/crypto(|/.*)$": "<rootDir>/libs/crypto/src/$1",
       "^@app/members(|/.*)$": "<rootDir>/libs/members/src/$1",
-      "^@app/channels(|/.*)$": "<rootDir>/libs/channels/src/$1"
+      "^@app/channels(|/.*)$": "<rootDir>/libs/channels/src/$1",
+      "^@app/permissions(|/.*)$": "<rootDir>/libs/permissions/src/$1",
+      "^@app/snowflake(|/.*)$": "<rootDir>/libs/snowflake/src/$1"
     }
   }
 }
