--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
@@ -33,12 +34,14 @@
     "@nestjs/websockets": "^9.4.0",
     "@types/inquirer": "^9.0.3",
     "better-sqlite3": "^8.3.0",
+    "cache-manager": "^5.2.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.17.0",
     "kysely": "^0.24.2",
     "magic-regexp": "^0.7.0",
     "ms": "^2.1.3",
+    "nestjs-spelunker": "^1.1.5",
     "pg": "^8.10.0",
     "pg-connection-string": "^2.5.0",
     "pg-cursor": "^2.9.0",
@@ -107,7 +110,8 @@
       "^@app/members(|/.*)$": "<rootDir>/libs/members/src/$1",
       "^@app/channels(|/.*)$": "<rootDir>/libs/channels/src/$1",
       "^@app/permissions(|/.*)$": "<rootDir>/libs/permissions/src/$1",
-      "^@app/snowflake(|/.*)$": "<rootDir>/libs/snowflake/src/$1"
+      "^@app/snowflake(|/.*)$": "<rootDir>/libs/snowflake/src/$1",
+      "^@app/dev(|/.*)$": "<rootDir>/libs/dev/src/$1"
     }
   }
 }
