--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^6.10.1",
     "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
@@ -31,6 +32,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.4.0",
     "@nestjs/platform-ws": "^9.4.0",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/websockets": "^9.4.0",
     "@types/inquirer": "^9.0.3",
     "better-sqlite3": "^8.3.0",
